--- a/index.html
+++ b/index.html
@@ -1,20 +1,4 @@
-const nodemailer = require('nodemailer')
-const transporter = nodemailer.createTransport({
-  host: 'smtp.gmail.com',
-  port: 587,
-  secure: false,
-  auth: {
-    user: process.env.EMAIL,
-    pass: process.env.PW_EMAIL
-  }
-})
-exports.sendEmail = (email, url) => {
-  return new Promise((resolve, reject) => {
-    const message = {
-      from: process.env.EMAIL, // sender address
-      to: email,
-      subject: 'Reset Password',
-      html: `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -50,15 +34,4 @@ exports.sendEmail = (email, url) => {
     <a href='${url}'>Reset Password</a>
   </div>
 </body>
-</html>`
-    }
-    transporter.sendMail(message, (error, info) => {
-      if (error) {
-        reject(error)
-      } else {
-        resolve(info)
-      }
-    }
-    )
-  })
-}
+</html>
